@@ -1,14 +1,15 @@
-package com.wairesd.discordbm.bukkit.network;
+package com.wairesd.discordbm.api.network;
 
 import com.google.gson.Gson;
-import com.wairesd.discordbm.bukkit.DiscordBMB;
-import com.wairesd.discordbm.bukkit.config.configurators.Settings;
-import com.wairesd.discordbm.bukkit.models.command.Command;
+import com.wairesd.discordbm.api.platform.Platform;
+import com.wairesd.discordbm.api.handle.MessageHandler;
+import com.wairesd.discordbm.api.models.command.Command;
 import com.wairesd.discordbm.common.models.register.RegisterMessage;
-import com.wairesd.discordbm.common.utils.logging.JavaPluginLogger;
 import com.wairesd.discordbm.common.utils.logging.PluginLogger;
 import io.netty.bootstrap.Bootstrap;
 import io.netty.channel.*;
+import io.netty.channel.Channel;
+
 import io.netty.channel.nio.NioEventLoopGroup;
 import io.netty.channel.socket.SocketChannel;
 import io.netty.channel.socket.nio.NioSocketChannel;
@@ -19,28 +20,22 @@ import io.netty.handler.codec.string.StringEncoder;
 
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
-import java.util.List;
+import java.util.Collections;
 import java.util.concurrent.CompletableFuture;
 
-import static org.bukkit.Bukkit.getLogger;
-
-/**
- * Represents a Netty-based client used to establish and manage a connection to a Velocity server.
- * This class handles the lifecycle of the client including connecting, sending messages,
- * receiving messages, and handling reconnection logic.
- */
 public class NettyClient {
-    private final PluginLogger pluginLogger = new JavaPluginLogger(getLogger());
+    private final PluginLogger pluginLogger;
     private final InetSocketAddress address;
-    private final DiscordBMB plugin;
+    private final Platform platform;
     private EventLoopGroup group;
     private Channel channel;
     private final Gson gson = new Gson();
     private boolean closing = false;
 
-    public NettyClient(InetSocketAddress address, DiscordBMB plugin) {
+    public NettyClient(InetSocketAddress address, Platform platform, PluginLogger pluginLogger) {
         this.address = address;
-        this.plugin = plugin;
+        this.platform = platform;
+        this.pluginLogger = pluginLogger;
     }
 
     public void connect() {
@@ -57,7 +52,7 @@ public class NettyClient {
                             ch.pipeline().addLast("stringDecoder", new StringDecoder(StandardCharsets.UTF_8));
                             ch.pipeline().addLast("frameEncoder", new LengthFieldPrepender(2));
                             ch.pipeline().addLast("stringEncoder", new StringEncoder(StandardCharsets.UTF_8));
-                            ch.pipeline().addLast("handler", new MessageHandler(plugin));
+                            ch.pipeline().addLast("handler", new MessageHandler(platform, pluginLogger));
                         }
                     });
 
@@ -65,24 +60,25 @@ public class NettyClient {
                 ChannelFuture future = bootstrap.connect(address).sync();
                 if (future.isSuccess()) {
                     channel = future.channel();
-                    if (Settings.isDebugConnections()) {
+                    if (platform.isDebugConnections()) {
                         pluginLogger.info("Connected to Velocity at {}:{}", address.getHostString(), address.getPort());
                     }
                     sendRegistrationMessage();
+                    platform.onNettyConnected();
                 } else {
-                    if (Settings.isDebugConnections()) {
+                    if (platform.isDebugConnections()) {
                         pluginLogger.warn("Failed to connect to Velocity at {}:{}: {}", address.getHostString(), address.getPort(), future.cause().getMessage());
                     }
                     scheduleReconnect();
                 }
             } catch (InterruptedException e) {
-                if (Settings.isDebugErrors()) {
+                if (platform.isDebugErrors()) {
                     pluginLogger.error("Connection interrupted", e);
                 }
                 Thread.currentThread().interrupt();
             }
         }).exceptionally(throwable -> {
-            if (Settings.isDebugErrors()) {
+            if (platform.isDebugErrors()) {
                 pluginLogger.error("Error connecting to Velocity: {}", throwable.getMessage());
             }
             scheduleReconnect();
@@ -94,47 +90,49 @@ public class NettyClient {
         closing = true;
         if (channel != null) channel.close();
         if (group != null) group.shutdownGracefully();
-        if (Settings.isDebugConnections()) {
+        if (platform.isDebugConnections()) {
             pluginLogger.info("Netty client connection closed");
         }
     }
 
     public void send(String message) {
         if (isActive()) {
-            channel.writeAndFlush(message);
-            if (Settings.isDebugClientResponses()) {
-                pluginLogger.info("Sent message: {}", message);
-            }
-        } else {
-            if (Settings.isDebugErrors()) {
-                pluginLogger.warn("Cannot send message, channel inactive");
+            try {
+                ChannelFuture future = channel.writeAndFlush(message).sync();
+                if (!future.isSuccess() && platform.isDebugErrors()) {
+                    pluginLogger.error("Failed to send message: {}", future.cause().getMessage());
+                }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            } catch (Exception e) {
+                if (platform.isDebugErrors()) {
+                    pluginLogger.error("Error sending message: {}", e.getMessage());
+                }
             }
         }
     }
 
     private void sendRegistrationMessage() {
-        String secretCode = Settings.getSecretCode();
-        if (secretCode == null || secretCode.isEmpty()) {
-            return;
-        }
+        String secretCode = platform.getSecretCode();
+        if (secretCode == null || secretCode.isEmpty()) return;
 
         RegisterMessage<Command> registerMsg = new RegisterMessage<>(
                 "register",
-                plugin.getServerName(),
-                plugin.getName(),
-                List.of(),
+                platform.getServerName(),
+                "DiscordBMB",
+                Collections.emptyList(),
                 secretCode
         );
         String json = gson.toJson(registerMsg);
         send(json);
-        if (Settings.isDebugCommandRegistrations()) {
+        if (platform.isDebugCommandRegistrations()) {
             pluginLogger.info("Sent initial registration message with no commands.");
         }
     }
 
     private void scheduleReconnect() {
         if (!closing) {
-            plugin.getServer().getScheduler().runTaskLaterAsynchronously(plugin, this::connect, 300L);
+            platform.runTaskAsynchronously(() -> connect());
         }
     }
 
